uploaded bench videos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">AIKIDO: Combining inverse kinematics and rigid constrained dynamics for online collision avoidance</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -63,6 +63,9 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Scuola Superiore Sant'Anna<br></span>
+                  </div>
+                  <div class="is-size-5 publication-authors">
+                    <span class="author-block">Late Breaking results - ICRA 2025<br></span>
                   </div>
           </div>
         </div>
@@ -77,28 +80,49 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
+      <h2 class="title is-3 has-text-centered">Arm positioning</h2>
+      <div class="columns">
+        <!-- First carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#3 obstacles</h2>
+          <div id="results-carousel-pos-3" class="carousel results-carousel">
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_3_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_3_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_3_3.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
         </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
+        <!-- Second carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#5 obstacles</h2>
+          <div id="results-carousel-pos-5" class="carousel results-carousel">
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_5_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_5_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_5_3.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -106,10 +130,129 @@
 </section>
 <!-- End video carousel -->
 
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <!-- First carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#10 obstacles</h2>
+          <div id="results-carousel-pos-10" class="carousel results-carousel">
+            <div class="item item-video3">
+              <video poster="" id="video3" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_10_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_10_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_10_3.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_10_4.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+        <!-- Second carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#15 obstacles</h2>
+          <div id="results-carousel-ev-10" class="carousel results-carousel">
+            <div class="item item-video3">
+              <video poster="" id="video3" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_15_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_15_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/pos_15_3.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-
-
-
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3 has-text-centered">Evading dynamic obstacles</h2>
+      <div class="columns">
+        <!-- First carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#5 obstacles</h2>
+          <div id="results-carousel-ev-5" class="carousel results-carousel">
+            <div class="item item-video1">
+              <video poster="" id="video1" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_5_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video2">
+              <video poster="" id="video2" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_5_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video2">
+              <video poster="" id="video2" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_5_3.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+        <!-- Second carousel column -->
+        <div class="column is-half">
+          <h2 class="title is-4 has-text-centered">#10 obstacles</h2>
+          <div id="results-carousel-ev-10" class="carousel results-carousel">
+            <div class="item item-video3">
+              <video poster="" id="video3" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_3.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_4.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_5.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="item item-video4">
+              <video poster="" id="video4" autoplay controls muted loop height="100%">
+                <source src="static/videos/dyn_10_6.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End video carousel -->
 
 <!-- Paper poster -->
 <section class="hero is-small is-light">
@@ -117,7 +260,7 @@
     <div class="container">
       <h2 class="title">Poster</h2>
 
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+      <iframe  src="static/pdfs/poster.pdf" width="100%" height="550" width="100%" frameborder="0" scrolling="no">
           </iframe>
         
       </div>
