title, icon and legend

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <title>AIKIDO Late Breaking</title>
+  <link rel="icon" type="image/x-icon" href="static/images/logo-biorobotica-en-blu.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -81,6 +81,9 @@
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3 has-text-centered">Arm positioning</h2>
+      <div class="has-text-centered" style="margin-bottom: 2rem;">
+        <img src="static/images/legend.png" alt="Descriptive alt text" style="max-width: 70%; height: auto;">
+      </div>  
       <div class="columns">
         <!-- First carousel column -->
         <div class="column is-half">
@@ -190,6 +193,10 @@
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3 has-text-centered">Evading dynamic obstacles</h2>
+      <h2 class="title is-5 has-text-centered">(robot stops on failure)</h2>
+      <div class="has-text-centered" style="margin-bottom: 2rem;">
+        <img src="static/images/legend.png" alt="Descriptive alt text" style="max-width: 70%; height: auto;">
+      </div>  
       <div class="columns">
         <!-- First carousel column -->
         <div class="column is-half">
