--- a/index.html
+++ b/index.html
@@ -74,12 +74,58 @@
   </div>
 </section>
 
+<!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/robot_party.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Our method is fast, efficient and works with any robot URDF for seamless integration. Handles multiple serial chains and can be used with any robot. 
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
 
+<!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/yumi_touch.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        It enforces exact tunable safety margins between collision shapes, so that motion tracking with closed-loop inverse kinematics is always accurate as possible. 
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
+
+<!-- Paper poster -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Poster</h2>
+      <iframe  src="static/pdfs/poster.pdf" width="100%" height="550" width="100%" frameborder="0" scrolling="no">
+          </iframe>
+        
+      </div>
+    </div>
+  </section>
+<!--End paper poster -->
 
 <!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title">Results</h2>
       <h2 class="title is-3 has-text-centered">Arm positioning</h2>
       <div class="has-text-centered" style="margin-bottom: 2rem;">
         <img src="static/images/legend.png" alt="Descriptive alt text" style="max-width: 70%; height: auto;">
@@ -133,6 +179,7 @@
 </section>
 <!-- End video carousel -->
 
+<!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -188,12 +235,13 @@
     </div>
   </div>
 </section>
+<!-- End video carousel -->
 
+<!-- Video carousel -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3 has-text-centered">Evading dynamic obstacles</h2>
-      <h2 class="title is-5 has-text-centered">(robot stops on failure)</h2>
       <div class="has-text-centered" style="margin-bottom: 2rem;">
         <img src="static/images/legend.png" alt="Descriptive alt text" style="max-width: 70%; height: auto;">
       </div>  
@@ -256,31 +304,31 @@
           </div>
         </div>
       </div>
+      <h2 class="title is-5 has-text-centered">(robot stops on failure)</h2>
     </div>
   </div>
 </section>
 <!-- End video carousel -->
 
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/poster.pdf" width="100%" height="550" width="100%" frameborder="0" scrolling="no">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
-
-
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <p style="text-align: center;">
+        Preliminary abstract with real world results on a bimanual teleoperation platform is already available!
+      </p>
+      <pre><code>@inproceedings{penzotti2024combining,
+                title=Combining inverse kinematics and rigid constrained dynamics for online collision avoidance,
+                author=Mattia Penzotti and Marco Controzzi,
+                booktitle=2024 I-RIM Conference,
+                DOI=10.5281/zenodo.14731073,
+                pages={106--110},
+                year = 2024,
+                organization=I-RIM
+                }</code></pre>
+                <p style="text-align: center;">
+        <b>Stay tuned for the full paper with code released. </b>
+      </p>
     </div>
 </section>
 <!--End BibTex citation -->
