--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <p style="text-align: center;">
-        Preliminary abstract with real world results on a bimanual teleoperation platform is already available!
+        Preliminary abstract with real world results on a bimanual teleoperation platform is already available <a href="https://zenodo.org/records/14731073" target="https://proceedings.i-rim.it/content/details/2024/14731073">here</a>!
       </p>
       <pre><code>@inproceedings{penzotti2024combining,
                 title=Combining inverse kinematics and rigid constrained dynamics for online collision avoidance,
