--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">AIKIDO: Combining inverse kinematics and rigid constrained dynamics for online collision avoidance</h1>
             <div class="is-size-5 publication-authors">
+              
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://www.santannapisa.it/it/mattia-penzotti" target="_blank">Mattia Penzotti</a>,</span>
@@ -67,7 +68,21 @@
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Late Breaking results - ICRA 2025<br></span>
                   </div>
-          </div>
+          
+          <div class="column has-text-centered">
+                    <div class="publication-links">
+                         <!-- Arxiv PDF link -->
+                      <span class="link-block">
+                        <a href="https://zenodo.org/records/14731073" target="_blank"
+                        class="external-link button is-normal is-rounded is-dark">
+                        <span class="icon">
+                          <i class="fas fa-file-pdf"></i>
+                        </span>
+                        <span>Abstract</span>
+                      </a>
+                    </span>
+                    </div>
+                    </div>
         </div>
       </div>
     </div>
