--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block" id="arxiv-link">
-                  <a href="" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -137,7 +136,7 @@
                 </script>
 
                 <!-- Abstract link -->
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://zenodo.org/records/14731073" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -145,7 +144,7 @@
                     </span>
                     <span>Abstract</span>
                   </a>
-                </span>
+                </span> -->
 
 
               </div>
@@ -357,7 +356,7 @@
   <!-- End video carousel -->
 
   <!-- Paper poster -->
-  <section class="hero is-small">
+  <!-- <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <h2 class="title">Poster @ ICRA 2025 Late Breaking Results</h2>
@@ -366,11 +365,11 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!--End paper poster -->
 
   <!--BibTex citation -->
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{penzotti2024combining,
@@ -385,7 +384,7 @@
       }</code>
     </pre>
     </div>
-  </section>
+  </section> -->
   <!--End BibTex citation -->
 
 
