--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             <div class="is-size-5 publication-authors">
 
               <!-- Paper authors -->
-              <span class="author-block">
+              <!-- <span class="author-block">
                 <a href="https://www.santannapisa.it/it/mattia-penzotti" target="_blank">Mattia Penzotti</a>,</span>
               <span class="author-block">
-                <a href="https://www.santannapisa.it/it/marco-controzzi" target="_blank">Marco Controzzi</a></span>
+                <a href="https://www.santannapisa.it/it/marco-controzzi" target="_blank">Marco Controzzi</a></span> -->
             </div>
 
-            <div class="is-size-5 publication-authors">
+            <!-- <div class="is-size-5 publication-authors">
               <span class="author-block">Scuola Superiore Sant'Anna<br></span>
-            </div>
+            </div> -->
             <!-- <div class="is-size-5 publication-authors">
                     <span class="author-block">Late Breaking results - ICRA 2025<br></span>
                   </div> -->
